--- a/client-app/index.html
+++ b/client-app/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="Project 2"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - client-app</title>
+    <title>Project 2</title>
   </head>
   <body>
     <div id="app"></div>
